# OpenNovel

./: .gitignore  .mcp.json  .opennovel.yaml  .pre-commit-config.yaml  CLAUDE.md  CODE_OF_CONDUCT.md  CONTEXT.md  CONTRIBUTING.md  LICENSE  README.md  README.zh.md  SECURITY.md  novel.yaml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml  release.yml
canon/: world_rules.md
characters/: char_001.md
demo_novel/: loom.yaml
demo_novel/canon/: world_rules.md
demo_novel/characters/: char_001.md  char_002.md  char_003.md  char_004.md  char_005.md  char_006.md  char_007.md  char_008.md  char_009.md
demo_novel/draft/: ch_001.md  ch_002.md  ch_003.md  ch_004.md  ch_005.md  ch_006.md  ch_007.md  ch_008.md  ch_009.md  ch_010.md  ch_011.md
demo_novel/outlines/: outline_30ch.md  outline_45ch.md
demo_novel/subconscious/: lines.md
docs/: cli-manual.md  code_review_results.md  gui-visual-design-guide.md  mcp-integration.md  opennovel优化方向指导.md  optimization-roadmap.md  rag_optimization_test_report.md  user-guide.md
docs/adr/: 0001-file-level-incremental-snapshots.md  0002-three-tier-context-strategy.md  0003-unified-context-assembler-for-gen2-agents.md  0004-independent-metrics-database.md  0005-three-layer-mutation-control.md  0006-hybrid-routing-architecture.md  0007-hybrid-search-and-reranking-architecture.md
draft/: ch_001.md
loom/: __init__.py  mcp_server.py
loom/agents/: __init__.py  actor.py  auditor.py  critic.py  director.py  manager.py  writer.py
loom/cli/: __init__.py  auto.py  commit.py  main.py  stash.py  write.py
loom/core/: __init__.py  auto_runner.py  config.py  context_assembler.py  diff_checker.py  doctor.py  llm.py  parser.py  retriever.py  state_manager.py
loom/prompts/: actor.v1.md  auditor.v1.md  critic.v1.md  critic_outline.v1.md  director.v1.md  manager.v1.md  writer.v1.md
loom/schemas/: __init__.py  character.py  director.py  evaluation.py  event.py  manager_update.py
loom/storage/: __init__.py  sqlite.py  vector.py  yaml_storage.py
opennovel/: __init__.py  mcp_server.py
opennovel/agents/: __init__.py  actor.py  auditor.py  critic.py  director.py  manager.py  writer.py
opennovel/cli/: __init__.py  auto.py  commit.py  main.py  stash.py  write.py
opennovel/core/: __init__.py  agent_autonomy.py  auto_runner.py  canon_checker.py  causal_graph.py  chapter_utils.py  config.py  context_assembler.py  diff_checker.py  doctor.py  evaluation_auditor.py  global_config.py  hybrid_retriever.py  llm.py  mutation_strategy.py  retriever.py  safety_fence.py  state_manager.py  state_projector.py  tool_registry.py
opennovel/prompts/: actor.v1.md  auditor.v1.md  critic.v1.md  critic_outline.v1.md  director.v1.md  manager.v1.md  writer.v1.md
opennovel/schemas/: __init__.py  character.py  director.py  evaluation.py  event.py  foreshadowing.py  knowledge.py  manager_update.py  metrics.py  mutation.py  outline.py  outline_evaluation.py  state.py
opennovel/storage/: __init__.py  foreshadowing.py  metrics.py  sqlite.py  summaries.py  timeline.py  vector.py  yaml_storage.py
sample/: novel.yaml
sample/canon/: world_rules.md
sample/characters/: char_001.md  char_002.md
sample/draft/: ch_001.md
sample/foreshadowing/: foreshadowing.md
sample/outlines/: story.md
sample/subconscious/: lines.md
sample/summaries/: ch_001.md
sample/timeline/: events.md
tests/: __init__.py  test_actor.py  test_agent_autonomy.py  test_auditor.py  test_auto_runner.py  test_blind_variation.py  test_canon_checker.py  test_causal_chain.py  test_causal_graph.py  test_cli_auto.py  test_cli_commit.py  test_cli_main.py  test_cli_stash.py  test_cli_write.py  test_config.py  test_context_assembler.py  test_critic.py  test_diff_checker.py  test_director.py  test_doctor.py  test_foreshadowing.py  test_global_config.py  test_hybrid_retriever.py  test_integration.py  test_llm.py  test_manager_agent.py  test_mcp_server.py  test_metrics.py  test_mutation.py  test_optimizations.py  test_parser.py  test_retriever.py  test_safety_fence.py  test_schemas.py  test_schemas_new.py  test_state_manager.py  test_storage.py  test_three_tier_context.py  test_tool_registry.py  test_vector.py  (+2 more)
设计文档/: 设计方案文档.md  设计需求文档.md
